--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@ngrx/effects": "^15.0.0",
+    "@ngrx/router-store": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
